test/sematest/invalid/assign_to_null.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    null = new Test();
  }
}
